# sockaddrutil

./: .travis.yml  CMakeLists.txt  CmakeLists.txt  README.md  sockaddrutil.pc.in
cmake/: LCov.cmake
include/: sockaddr_util.h
src/: CMakeLists.txt  sockaddr_util.c
test/: CMakeLists.txt  sockaddr_test.c
